@@ -32,7 +32,8 @@ Core and Builtins
 Library
 -------
 
-- Issue #17919: select.poll.poll() again works with poll.POLLNVAL on AIX.
+- Issue #17919: select.poll.register() again works with poll.POLLNVAL on AIX.
+  Fixed integer overflow in the eventmask parameter.
 
 - Issue #19063: if a Charset's body_encoding was set to None, the email
   package would generate a message claiming the Content-Transfer-Encoding
